# rust-jni-template

./: Cargo.toml  README.md
src/: lib.rs
