[package]
name = "realjni"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"

[lib]
crate_type = ["staticlib", "dylib"]

[features]
default = ["foo"]
foo = []
bar = []
